--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			if(evaluate())
 			{
 				$('.main-container').addClass('winner');
-				setTimeout(function(){window.location.href = 'file:///C:/Repos/BristolStoolQuiz/BristolStoolQuiz/index2.html'; }, 2000); 
+				setTimeout(function(){window.location.href = 'https://bennymurray.github.io/BristolStoolQuiz/index2.html'; }, 2000); 
 			}
 			else{
 				$('.main-container').addClass('gameover');
