--- a/index2.html
+++ b/index2.html
@@ -48,7 +48,7 @@
 			if(evaluate())
 			{
 			
-				setTimeout(function(){window.location.href = 'file:///C:/Repos/BristolStoolQuiz/BristolStoolQuiz/index3.html'; }, 2000); 
+				setTimeout(function(){window.location.href = 'https://bennymurray.github.io/BristolStoolQuiz/index3.html'; }, 2000); 
 			}
 			else{
 				$('.main-container').addClass('gameover');
